# zentri

./: .gitignore  CLAUDE.md  CODEBUDDY.md  README.md  index.html  intro.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_bookmarks.sql  002_add_highlight_type.sql  003_add_vectors.sql  004_add_cards.sql
src-tauri/src/: book_processor.rs  config.rs  crdt.rs  db.rs  db_sqlx.rs  error.rs  fs.rs  graph.rs  lib.rs  main.rs  menu.rs  models.rs  search.rs  state.rs  storage.rs  vault.rs  watcher.rs  web_reader.rs
src-tauri/src/ai/: embeddings.rs  manager.rs  mod.rs  models.rs  rag.rs  sidecar.rs
src-tauri/src/commands/: ai.rs  assets.rs  bookmarks.rs  books.rs  canvas.rs  cards.rs  crdt.rs  daily.rs  graph.rs  highlights.rs  migration.rs  mod.rs  search.rs  sources.rs  vault.rs  watcher.rs  web_reader.rs
src-tauri/src/database/: bookmark.rs  card.rs  config.rs  highlight.rs  mod.rs  source.rs  web_snapshot.rs
src-tauri/src/models/: bookmark.rs  canvas.rs  card.rs  highlight.rs  mod.rs  search.rs  source.rs
src-tauri/src/services/: book_service.rs  bookmark_service.rs  card_service.rs  highlight_service.rs  mod.rs  source_service.rs  web_reader_service.rs
src/components/: app-sidebar.tsx  backlinks-panel.tsx  card-desk.tsx  card-editor.tsx  card-list.tsx  card-workspace.tsx  command-palette.tsx  content-renderer.tsx  create-canvas-dialog.tsx  create-card-dialog.tsx  create-source-dialog.tsx  editor-panel.tsx  find-dialog.tsx  graph-view.tsx  kanban-view.tsx  rename-canvas-dialog.tsx  rename-card-dialog.tsx  search-dialog.tsx  vault-selector.tsx  vault-switcher-dialog.tsx  window-title-bar.tsx
src/components/ai/: ai-chat.tsx  model-manager.tsx
src/components/ui/: card.tsx  (+8 more)
src/hooks/: use-backlinks.ts  use-layout-shared.ts  use-native-features.ts  use-theme.ts  use-window-state.ts  use-window-title.ts
src/lib/: api.ts  book-metadata.ts  card-routes.ts  content-preview.ts  content-transformer.ts  editor-content.ts  file-picker.ts  file-url.ts  image-handler.ts  markdown-parser.ts  reader-errors.ts  reader-navigation.ts
src/pages/: ai-chat-page.tsx  boards-page.tsx  canvas-detail-page.tsx  card-detail-page.tsx  dashboard-page.tsx  graph-page.tsx  library-page.tsx  permanent-note-page.tsx  project-note-page.tsx  review-page.tsx  settings-page.tsx  source-detail-page.tsx  tags-page.tsx
src/router/: constants.ts  index.tsx  types.ts  utils.ts
src/store/: index-new.ts  index.ts
src/types/: canvas.ts  index.ts
(+80 files in other folders)
