[package]
name = "zentri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zentri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 文件系统操作
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
regex = "1"
serde_yaml = "0.9"

# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "1"

# 系统目录
dirs = "5"

# 全文检索
tantivy = "0.22"
jieba-rs = "0.7"

# 图谱布局
rand = "0.8"
petgraph = "0.6"
fdg-sim = "0.1"

# CRDT 协作编辑
yrs = "0.18"

# 文件监听
notify = "6"
notify-debouncer-mini = "0.4"

# 异步运行时
tokio = { version = "1", features = ["sync", "rt"] }

# 网页阅读器 - 网页抓取与清洗
reqwest = { version = "0.12", features = ["blocking"] }
readability = "0.3"
scraper = "0.22"
url = "2"

# 测试依赖
[dev-dependencies]
tempfile = "3"
